vcluster_versioned_docs/version-0.35.0/configure/vcluster-yaml/deploy.mdx
---
title: Deploy vCluster AddOns
sidebar_label: deploy
sidebar_position: 9
description: Deploy
sidebar_class_name: host-nodes
---

import TenancySupport from '../../_fragments/tenancy-support.mdx';
import DeployConfig from '../../_partials/config/deploy.mdx';


## Configure addons

vCluster supports addons that extend the capabilities of your tenant cluster. You can configure these addons during deployment to adjust networking, observability, and other features for your environment and requirements.

### Metrics Server
<TenancySupport privateNodes="true" hostNodes="true" />

vCluster can install the [Kubernetes Metrics Server](https://github.com/kubernetes-sigs/metrics-server) into the tenant cluster. Enable it when you need `kubectl top` output or want the Horizontal Pod Autoscaler to use CPU and memory metrics.

```yaml title="Enable Metrics Server"
deploy:
  metricsServer:
    enabled: true
```

### CNI
<TenancySupport privateNodes="true" />

vCluster installs [Flannel](https://github.com/flannel-io/flannel) as the Container Network Interface (CNI) by default. You can disable it and install your own CNI.

```yaml title="Disable default Flannel CNI"
deploy:
  cni:
    flannel:
      enabled: false
```

:::note User-managed component
When you disable Flannel, you are responsible for installing and operating a CNI in the tenant cluster. vCluster support does not cover the configuration or behavior of user-managed CNI installations.
:::

### Kube proxy
<TenancySupport privateNodes="true" />

vCluster installs [kube-proxy](https://kubernetes.io/docs/reference/command-line-tools-reference/kube-proxy/) by default to configure services on worker nodes. If your CNI implements its own service proxy (for example, Cilium in kube-proxy replacement mode), you can disable it.

```yaml title="Disable kube-proxy"
deploy:
  kubeProxy:
    enabled: false
```

To customize kube-proxy behavior without disabling it, use the `config` field. Values merge into the default KubeProxyConfiguration. See the [Kubernetes kube-proxy config API reference](https://kubernetes.io/docs/reference/config-api/kube-proxy-config.v1alpha1/) for available fields.

```yaml title="Custom kube-proxy config"
deploy:
  kubeProxy:
    config:
      mode: ipvs
      ipvs:
        scheduler: rr
```

Use `extraArgs` to pass additional flags directly to the kube-proxy binary.

### MetalLB
<TenancySupport privateNodes="true" />

vCluster can install [MetalLB](https://metallb.io/) into the tenant cluster. Enable this with the following YAML:

```yaml title="Enable MetalLB"
deploy:
  metallb:
    enabled: true
    ipAddressPool:
      addresses:
      - 10.X.X.1-10.X.X.100 # your IPs here
```

### Local Path Provisioner
<TenancySupport privateNodes="true" />

vCluster installs the [Local Path Provisioner](https://github.com/rancher/local-path-provisioner) by default to provide a default StorageClass for stateful workloads. If you bring your own storage solution, you can disable it.

```yaml title="Disable Local Path Provisioner"
deploy:
  localPathProvisioner:
    enabled: false
```

:::note User-managed component
When you disable the Local Path Provisioner and replace it with your own StorageClass, vCluster support does not cover your storage configuration. Replacing the provisioner does not affect existing PersistentVolumes, However, new PersistentVolumeClaims do not bind until a replacement provisioner is available.
:::

## Control plane components

CoreDNS and Konnectivity are control plane components, not deploy addons. Configure them under `controlPlane` in your vcluster.yaml:

- **CoreDNS**: see [CoreDNS configuration](./control-plane/components/coredns.mdx)
- **Konnectivity**: configure or disable under `controlPlane.advanced.konnectivity`

## Config reference

<DeployConfig />
