vcluster_versioned_docs/version-0.37.0/configure/vcluster-yaml/deploy.mdx
---
title: Deploy vCluster AddOns
sidebar_label: deploy
sidebar_position: 9
description: Deploy
sidebar_class_name: host-nodes
---

import TenancySupport from '../../_fragments/tenancy-support.mdx';
import DeployConfig from '../../_partials/config/deploy.mdx';


## Configure addons

vCluster supports addons that extend the capabilities of your tenant cluster. You can configure these addons during deployment to adjust networking, observability, and other features for your environment and requirements.

### Metrics server
<TenancySupport privateNodes="true" hostNodes="true" />

vCluster can install the [Kubernetes Metrics Server](https://github.com/kubernetes-sigs/metrics-server) into the tenant cluster. Enable it when you need `kubectl top` output or want the Horizontal Pod Autoscaler to use CPU and memory metrics.

```yaml title="Enable Metrics Server"
deploy:
  metricsServer:
    enabled: true
```

### CNI
<TenancySupport privateNodes="true" />

vCluster installs [Flannel](https://github.com/flannel-io/flannel) as the Container Network Interface (CNI) by default. You can disable it and install your own CNI.

```yaml title="Disable default Flannel CNI"
deploy:
  cni:
    flannel:
      enabled: false
```

:::note User-managed component
When you disable Flannel, you are responsible for installing and operating a CNI in the tenant cluster. vCluster support does not cover the configuration or behavior of user-managed CNI installations.
:::

### Kube proxy
<TenancySupport privateNodes="true" />

vCluster installs [kube-proxy](https://kubernetes.io/docs/reference/command-line-tools-reference/kube-proxy/) by default to configure services on worker nodes. If your CNI implements its own service proxy (for example, Cilium in kube-proxy replacement mode), you can disable it.

```yaml title="Disable kube-proxy"
deploy:
  kubeProxy:
    enabled: false
```

To customize kube-proxy behavior without disabling it, use the `config` field. Values merge into the default KubeProxyConfiguration. See the [Kubernetes kube-proxy config API reference](https://kubernetes.io/docs/reference/config-api/kube-proxy-config.v1alpha1/) for available fields.

```yaml title="Custom kube-proxy config"
deploy:
  kubeProxy:
    config:
      mode: ipvs
      ipvs:
        scheduler: rr
```

Use `extraArgs` to pass additional flags directly to the kube-proxy binary.

### MetalLB
<TenancySupport privateNodes="true" />

vCluster can install [MetalLB](https://metallb.io/) into the tenant cluster. Enable this with the following YAML:

```yaml title="Enable MetalLB"
deploy:
  metallb:
    enabled: true
    ipAddressPool:
      addresses:
      - 10.X.X.1-10.X.X.100 # your IPs here
```

### Local path provisioner
<TenancySupport privateNodes="true" />

vCluster installs the [Local Path Provisioner](https://github.com/rancher/local-path-provisioner) by default to provide a default StorageClass for stateful workloads. If you bring your own storage solution, you can disable it.

```yaml title="Disable Local Path Provisioner"
deploy:
  localPathProvisioner:
    enabled: false
```

:::note User-managed component
When you disable the Local Path Provisioner and replace it with your own StorageClass, vCluster support does not cover your storage configuration. Replacing the provisioner does not affect existing PersistentVolumes, However, new PersistentVolumeClaims do not bind until a replacement provisioner is available.
:::

### KubeVirt CSI
<TenancySupport privateNodes="true" />

vCluster can deploy a [KubeVirt](https://kubevirt.io/) CSI driver into the tenant cluster. It provisions PersistentVolumes as CDI DataVolumes in the vCluster's namespace on the control plane cluster. It then hot-plugs them into the KubeVirt virtual machines backing the tenant cluster's private nodes. This is a storage integration, unrelated to the [KubeVirt integration](../../integrations/kubevirt.mdx), which syncs KubeVirt VM resources from the tenant cluster to the control plane cluster. See [How this differs from KubeVirt CSI](../../integrations/kubevirt.mdx#how-this-differs-from-kubevirt-csi) for the distinction.

#### Prerequisites

- [Private nodes](../vcluster-yaml/private-nodes/README.mdx) enabled. KubeVirt CSI is rejected when `controlPlane.standalone.enabled` is `true`, since volumes are provisioned in a control-plane-cluster namespace that standalone deployments don't have.
- [KubeVirt Containerized Data Importer (CDI)](https://kubevirt.io/user-guide/storage/containerized_data_importer/) installed on the control plane cluster. Volumes are provisioned as CDI `DataVolume` objects rather than plain PersistentVolumeClaims, because KubeVirt's volume hot-plug expects CDI to have already created the underlying disk image.
- The private nodes backing this tenant cluster must be KubeVirt virtual machines in the same namespace as the tenant cluster. You can provision them through a [KubeVirt node provider](/docs/platform/administer/node-providers/kubevirt) and [auto nodes](private-nodes/auto-nodes.mdx). The controller first matches a virtual machine to a node by name, then falls back to matching internal IP addresses. It retries until a matching virtual machine is available. The driver doesn't create virtual machines itself.

#### Enable KubeVirt CSI

```yaml title="Enable the KubeVirt CSI driver"
deploy:
  # Disable the default Local Path Provisioner to avoid two default StorageClasses.
  localPathProvisioner:
    enabled: false
  csi:
    kubeVirt:
      enabled: true
```

#### Storage class behavior

By default, vCluster creates a StorageClass named `kubevirt` inside the tenant cluster and marks it as the default StorageClass. Disable either behavior with `storageClass.enabled: false` or `storageClass.default: false`. A default KubeVirt CSI StorageClass conflicts with [Local path provisioner](#local-path-provisioner), since both would create a default StorageClass in the tenant cluster. Disable one of them if you enable the other.

```yaml title="Use a specific host StorageClass and disk bus"
deploy:
  csi:
    kubeVirt:
      enabled: true
      storageClass:
        name: kubevirt-fast
        # Keep the Local Path Provisioner as the tenant cluster's default.
        default: false
        hostStorageClassName: fast-ssd
        bus: virtio
```

Leave `hostStorageClassName` empty to use the control plane cluster's default StorageClass for the underlying CDI DataVolume. `bus` defaults to `scsi` and is passed through to KubeVirt's disk configuration as-is. vCluster doesn't validate it, so any bus your KubeVirt installation supports (for example `virtio`, `sata`, or `scsi`) is accepted.

### Platform stacks

When a tenant cluster is managed by vCluster Platform 4.12, vCluster 0.37 can request StackInstances through `deploy.stacks`. Each Stack deploys to the tenant cluster after Platform creates it.

```yaml title="Deploy a Stack"
deploy:
  stacks:
    - name: observability
      # Resolve a StackTemplate from vCluster Platform.
      templateRef:
        name: observability
      parameters:
        retention: 7d
      # Keep children when a later template removes their tasks.
      prunePolicy: Retain
```

Each entry requires a stable `name` and exactly one definition source:

- `templateRef.name` references a cluster-scoped StackTemplate.
- `template` defines the parameters, tasks, and published outputs inline.

The optional `parameters` map supplies `.Values` used by the tasks. `defaults.taskTimeout` sets the default task timeout. `prunePolicy` is `Retain` by default and can be set to `Prune`.

This field requires vCluster Platform. The Platform UI hides the Stacks form for vCluster versions that don't support it. See [Use a Stack](/docs/platform/next/use-platform/apps/use-stacks) for the user workflow and status model.

## Control plane components

CoreDNS and Konnectivity are control plane components, not deploy addons. Configure them under `controlPlane` in your vcluster.yaml:

- **CoreDNS**: see [CoreDNS configuration](./control-plane/components/coredns.mdx)
- **Konnectivity**: configure or disable under `controlPlane.advanced.konnectivity`

## Config reference

<DeployConfig />
